@@ -38,6 +38,10 @@
 <p>2018-12-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): Detect and reject zero-length
+deflate-encoded row in MIFF version 0.  Fixes oss-fuzz 11876
+&quot;graphicsmagick/coder_MIFF_fuzzer: Use-of-uninitialized-value in
+deflate_slow&quot;. (Credit to OSS-Fuzz)</li>
 <li>configure.ac: Improve search for true Microsoft Windows fonts
 and provide better indication of results.  Fix a typo which caused
 DcrawExtraOptions not to be evaluated correctly.</li>
